--- a/home.html
+++ b/home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Links to css and js files -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/js/bootstrap.min.js"></script>
     <title>Home</title>
 </head>
+
 <body>
     <!-- Navigation bar -->
     <header class="header_area">
@@ -23,7 +26,7 @@
                     </div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html" target="_blank">Home</a>
+                            <a class="nav-link" href="home.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a>
@@ -31,11 +34,38 @@
                         <li class="nav-item">
                             <a class="nav-link" href="projects.html" target="_blank">Projects</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mailto:pfsun9999@msn.com" target="_blank">Email</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.linkedin.com/in/paul-sun-87918598" target="_blank">LinkedIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="assets/images/Resume.pdf" target="_blank">Resume</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
+            <br>
         </div>
     </header>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-2">
+                <img class="profile" src="./assets/images/rsz_profile.jpg" alt="Profile Picture">
+            </div>
+            <div class="col-lg-10">
+                <p>Flexible front-end web developer with a background in art and kinesiology and an understanding of how multiple
+                    components can link to each other with proper transitioning to form a complete and fluid action. Expecting to
+                    earn a certificate in full stack web development from the University of Washington in November 2020 and still
+                    learning and developing skills in HTML, CSS, and JavaScript. My main focus is to expand my knowledge in coding
+                    and contribute to making projects that are both aesthetically pleasing and user-friendly. I recently worked on a
+                    team of four to develop an application that allows users to look up restaurants and recipes with an input of a
+                    single city or ingredient. I’m eager to combine my background in art and kinesiology with my technical skills to
+                    develop user-friendly projects.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
