Added occupation that I want, location, and link to GitHub profile

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #333">
-                <h1 style="color: white">Paul Sun</h1>
+                <h1>Paul Sun</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="https://www.linkedin.com/in/paul-sun-87918598" target="_blank">LinkedIn</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="https://www.github.com/LostandConfusedStudent" target="_blank">GitHub</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="assets/images/Resume.pdf" target="_blank">Resume</a>
                         </li>
                     </ul>
@@ -50,12 +53,17 @@
         </div>
     </header>
 
+    <h6>Front-End Web Developer</h6>
+    <h6>Bellevue, WA</h6>
+
+    <br>
+
     <div class="container">
         <div class="row">
-            <div class="col-lg-2">
+            <div class="col-lg-3">
                 <img class="profile" src="./assets/images/rsz_profile.jpg" alt="Profile Picture">
             </div>
-            <div class="col-lg-10">
+            <div class="col-lg-9">
                 <p>Flexible front-end web developer with a background in art and kinesiology and an understanding of how multiple
                     components can link to each other with proper transitioning to form a complete and fluid action. Expecting to
                     earn a certificate in full stack web development from the University of Washington in November 2020 and still
