Added phone number to home page, and project titles, screenshots, and repository and deployed links to portfolio page

--- a/home.html
+++ b/home.html
@@ -55,13 +55,14 @@
 
     <h6>Front-End Web Developer</h6>
     <h6>Bellevue, WA</h6>
+    <h6>206-265-0889</h6>
 
     <br>
 
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
-                <img class="profile" src="./assets/images/rsz_profile.jpg" alt="Profile Picture">
+                <img src="./assets/images/rsz_profile.jpg" alt="Profile Picture">
             </div>
             <div class="col-lg-9">
                 <p>Flexible front-end web developer with a background in art and kinesiology and an understanding of how multiple
