Deleted projects.html and added project descriptions to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,6 @@
                             <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="projects.html" target="_blank">Projects</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="mailto:pfsun9999@msn.com" target="_blank">Email</a>
                         </li>
                         <li class="nav-item">
@@ -58,41 +55,62 @@
     <div class="container">
         <!-- Password Generator -->
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <h4>Password-Generator</h4>
+            </div>
+            <div class="col-lg-6">
                 <div class="image">
                     <img src="./assets/images/password.png" alt="Password Generator">
                 </div>
             </div>
             <div class="col-lg-6">
+                <p>The main objective is to create a random password generator with prompts. The prompts will request
+                    information that will influence the generator to come up with a more unique password for stronger
+                    security. This information will be inputs based on the user's preferences. After all prompts are
+                    satisfied, a random password will be generated and displayed on the page.</p>
                 <a href="https://github.com/LostandConfusedStudent/Password-Generator">Repository Link</a><br>
                 <a href="https://lostandconfusedstudent.github.io/Password-Generator/">Deployed Link</a>
             </div>
         </div>
+        <br>
 
         <!-- Work Day Scheduler -->
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <h4>Work-Day-Scheduler</h4>
+            </div>
+            <div class="col-lg-6">
                 <div class="image">
                     <img src="./assets/images/note.png" alt="Password Generator">
                 </div>
             </div>
             <div class="col-lg-6">
+                <p>This is a calendar application using a library from https://momentjs.com/. The application should
+                    work in the browser and let users save events in time slots of their choice. They can type any notes
+                    they have for a specific work hour time slot. The save buttons save their notes to local storage,
+                    which means that they'll remain on the page even after refreshing it. The date and time are also
+                    displayed at the top, and the clear button underneath it clears all entries.</p>
                 <a href="https://github.com/LostandConfusedStudent/Work-Day-Scheduler">Repository Link</a><br>
                 <a href="https://lostandconfusedstudent.github.io/Work-Day-Scheduler/">Deployed Link</a>
             </div>
         </div>
+        <br>
 
         <!-- Dine and Travel -->
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <h4>Dine-and-Travel</h4>
+            </div>
+            <div class="col-lg-6">
                 <div class="image">
                     <img src="./assets/images/Dine_and_Travel.png" alt="Password Generator">
                 </div>
             </div>
             <div class="col-lg-6">
+                <p>This is an application that allows users to search a cuisine of their choice which would give
+                    them options of restaurants near their location. Alternatively, if the user would prefer to make
+                    a specific meal themselves and/or if they do not have a restaurant near them that serves their
+                    desired cuisine they can also search for a recipe.</p>
                 <a href="https://github.com/LostandConfusedStudent/Dine-and-Travel">Repository Link</a><br>
                 <a href="https://lostandconfusedstudent.github.io/Dine-and-Travel/">Deployed Link</a>
             </div>
@@ -102,7 +120,7 @@
 
 
 
-        
+
         <!-- <h1>Work-Day-Scheduler</h1>
         <h1>Dine-and-Travel</h1> -->
     </div>
