--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="home.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a>
