--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,7 @@
     </header>
 
     <div class="container">
+        
         <!-- Password Generator -->
         <div class="row">
             <div class="col-lg-12">
@@ -116,15 +117,71 @@
             </div>
         </div>
 
+        <!-- Code Quiz -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h4>Dine-and-Travel</h4>
+            </div>
+            <div class="col-lg-6">
+                <div class="image">
+                    <img src="./assets/images/Start.png" alt="Code Quiz">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <p>This is a responsive application that challenges the users to take a timed quiz about coding. The
+                    questions are
+                    multiple-choice and revolve around javascript fundamentals. The questions will show after the user
+                    clicks start or selects an answer. Answering a question incorrectly will result in a penalty of
+                    reducing the time left in the timer. The game ends after all the questions are answered or the timer
+                    reaches zero seconds. Afterwards the player receives a score out of five and can enter in his or her
+                    initials for the score board. The Clear button clears all displayed scores.</p>
+                <a href="https://github.com/LostandConfusedStudent/Code-Quiz">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Code-Quiz/">Deployed Link</a>
+            </div>
+        </div>
 
+        <!-- Weather Dashboard -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h4>Dine-and-Travel</h4>
+            </div>
+            <div class="col-lg-6">
+                <div class="image">
+                    <img src="./assets/images/Dashboard.png" alt="Weather Dashboard">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <p>This is a weather application that retrieves data from an external API to view the weather of a city
+                    of interest. After typing entering a city as input and clicking on the submit button, the HTML and
+                    CSS code will be updated and the application will display current and future weather conditions for
+                    the city of interest. Displayed information will include: city name, date, icon representation,
+                    temperature, humidity, wind speed, and UV index. There will also be a search history displayed under
+                    the search bar and can be cleared with the clear button.</p>
+                <a href="https://github.com/LostandConfusedStudent/Weather-Dashboard">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Weather-Dashboard/">Deployed Link</a>
+            </div>
+        </div>
 
-
-
-
-        <!-- <h1>Work-Day-Scheduler</h1>
-        <h1>Dine-and-Travel</h1> -->
+        <!-- BookFace -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h4>Dine-and-Travel</h4>
+            </div>
+            <div class="col-lg-6">
+                <div class="image">
+                    <img src="./assets/images/Topics.png" alt="BookFace">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <p>This is a study application that allows users to view a list of youtube tutorials and
+                    book resources after clicking on one of the topics of interest, which are listed after clicking on
+                    the Subjects tab. All topics are related to what we are learning in this class, and after clicking
+                    on a topic button, a list of links will be displayed in two columns. One column has all the YouTube
+                    video links, and the other has all the book links.</p>
+                <a href="https://github.com/karunasato/BookFace/">Repository Link</a><br>
+                <a href="https://bookface2020.herokuapp.com/">Deployed Link</a>
+            </div>
+        </div>
     </div>
-
 </body>
-
 </html>
