Fixed project titles and added target=_blank to links so that project information opens in new tabs

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
                     </div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html" target="_blank">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="mailto:pfsun9999@msn.com" target="_blank">Email</a>
@@ -69,8 +69,8 @@
                     information that will influence the generator to come up with a more unique password for stronger
                     security. This information will be inputs based on the user's preferences. After all prompts are
                     satisfied, a random password will be generated and displayed on the page.</p>
-                <a href="https://github.com/LostandConfusedStudent/Password-Generator">Repository Link</a><br>
-                <a href="https://lostandconfusedstudent.github.io/Password-Generator/">Deployed Link</a>
+                <a href="https://github.com/LostandConfusedStudent/Password-Generator/" target="_blank">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Password-Generator/" target="_blank">Deployed Link</a>
             </div>
         </div>
         <br>
@@ -91,8 +91,8 @@
                     they have for a specific work hour time slot. The save buttons save their notes to local storage,
                     which means that they'll remain on the page even after refreshing it. The date and time are also
                     displayed at the top, and the clear button underneath it clears all entries.</p>
-                <a href="https://github.com/LostandConfusedStudent/Work-Day-Scheduler">Repository Link</a><br>
-                <a href="https://lostandconfusedstudent.github.io/Work-Day-Scheduler/">Deployed Link</a>
+                <a href="https://github.com/LostandConfusedStudent/Work-Day-Scheduler/" target="_blank">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Work-Day-Scheduler/" target="_blank">Deployed Link</a>
             </div>
         </div>
         <br>
@@ -112,15 +112,15 @@
                     them options of restaurants near their location. Alternatively, if the user would prefer to make
                     a specific meal themselves and/or if they do not have a restaurant near them that serves their
                     desired cuisine they can also search for a recipe.</p>
-                <a href="https://github.com/LostandConfusedStudent/Dine-and-Travel">Repository Link</a><br>
-                <a href="https://lostandconfusedstudent.github.io/Dine-and-Travel/">Deployed Link</a>
+                <a href="https://github.com/LostandConfusedStudent/Dine-and-Travel/" target="_blank">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Dine-and-Travel/" target="_blank">Deployed Link</a>
             </div>
         </div>
 
         <!-- Code Quiz -->
         <div class="row">
             <div class="col-lg-12">
-                <h4>Dine-and-Travel</h4>
+                <h4>Code Quiz</h4>
             </div>
             <div class="col-lg-6">
                 <div class="image">
@@ -135,15 +135,15 @@
                     reducing the time left in the timer. The game ends after all the questions are answered or the timer
                     reaches zero seconds. Afterwards the player receives a score out of five and can enter in his or her
                     initials for the score board. The Clear button clears all displayed scores.</p>
-                <a href="https://github.com/LostandConfusedStudent/Code-Quiz">Repository Link</a><br>
-                <a href="https://lostandconfusedstudent.github.io/Code-Quiz/">Deployed Link</a>
+                <a href="https://github.com/LostandConfusedStudent/Code-Quiz/" target="_blank">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Code-Quiz/" target="_blank">Deployed Link</a>
             </div>
         </div>
 
         <!-- Weather Dashboard -->
         <div class="row">
             <div class="col-lg-12">
-                <h4>Dine-and-Travel</h4>
+                <h4>Weather Dashboard</h4>
             </div>
             <div class="col-lg-6">
                 <div class="image">
@@ -157,15 +157,15 @@
                     the city of interest. Displayed information will include: city name, date, icon representation,
                     temperature, humidity, wind speed, and UV index. There will also be a search history displayed under
                     the search bar and can be cleared with the clear button.</p>
-                <a href="https://github.com/LostandConfusedStudent/Weather-Dashboard">Repository Link</a><br>
-                <a href="https://lostandconfusedstudent.github.io/Weather-Dashboard/">Deployed Link</a>
+                <a href="https://github.com/LostandConfusedStudent/Weather-Dashboard/" target="_blank">Repository Link</a><br>
+                <a href="https://lostandconfusedstudent.github.io/Weather-Dashboard/" target="_blank">Deployed Link</a>
             </div>
         </div>
 
         <!-- BookFace -->
         <div class="row">
             <div class="col-lg-12">
-                <h4>Dine-and-Travel</h4>
+                <h4>BookFace</h4>
             </div>
             <div class="col-lg-6">
                 <div class="image">
@@ -178,8 +178,8 @@
                     the Subjects tab. All topics are related to what we are learning in this class, and after clicking
                     on a topic button, a list of links will be displayed in two columns. One column has all the YouTube
                     video links, and the other has all the book links.</p>
-                <a href="https://github.com/karunasato/BookFace/">Repository Link</a><br>
-                <a href="https://bookface2020.herokuapp.com/">Deployed Link</a>
+                <a href="https://github.com/karunasato/BookFace/" target="_blank">Repository Link</a><br>
+                <a href="https://bookface2020.herokuapp.com/" target="_blank">Deployed Link</a>
             </div>
         </div>
     </div>
